--- a/core/res/res/values/cr_config.xml
+++ b/core/res/res/values/cr_config.xml
@@ -161,4 +161,7 @@
     <!-- Ignore post running notifications for selected apps -->
     <string-array name="config_postNotificationIgnoredApps" translatable="false">
     </string-array>
+
+    <!-- Whether to use Richtap vibration -->
+    <bool name="config_usesRichtapVibration">false</bool>
 </resources>
